# VulkanRenderingEngine

./: $null  .gitignore  CMakeLists.txt  README.md  build_log.txt
App/: main.cc  main.h
App/Models/Cake/: Cake.mtl
Core/Application/: Application.cc  Application.h
Core/Application/WindowSpec/: WindowSpec.cc  WindowSpec.h
Core/Camera/: Camera.cpp  Camera.h
Core/DebugOutput/: DubugOutput.h
Core/Input/: Input.cpp  Input.h
Core/Loaders/: Model.h  ModelLoader.cpp  ModelLoader.h
Core/Loaders/OBJLoader/: OBJLoader.cpp  OBJLoader.h
Core/MaterialHandler/: Material.h
Core/Math/: Quaternions.h
Core/Renderer/TextureLoader/: Texture.cpp  Texture.h
Core/Renderer/VertexTypes/: ModelVertex.h  Vertex.h
Core/Renderer/VulkanCommandBuffer/: VulkanCommandBuffer.cpp  VulkanCommandBuffer.h
Core/Renderer/VulkanDescriptor/: VulkanDescriptor.cpp  VulkanDescriptor.h
Core/Renderer/VulkanDevice/: VulkanDevice.cpp  VulkanDevice.h
Core/Renderer/VulkanFrameBuffer/: VulkanFrameBuffer.cpp  VulkanFrameBuffer.h
Core/Renderer/VulkanGraphicsPipeline/: VulkanGraphicsPipeline.cpp  VulkanGraphicsPipeline.h
Core/Renderer/VulkanImage/: VulkanImage.cpp  VulkanImage.h
Core/Renderer/VulkanImageView/: VulkanImageView.cpp  VulkanImageView.h
Core/Renderer/VulkanInstance/: VulkanInstance.cpp  VulkanInstance.h
Core/Renderer/VulkanInstance/VkPropStructs/: VkPropStructs.h
Core/Renderer/VulkanMemoryAllocator/: VulkanMemoryAllocator.cpp  VulkanMemoryAllocator.h
Core/Renderer/VulkanRenderPass/: VulkanRenderPass.cpp  VulkanRenderPass.h
Core/Renderer/VulkanRenderer/: VulkanRenderer.cpp
Core/Renderer/VulkanSurface/: VulkanSurface.cpp  VulkanSurface.h
Core/Renderer/VulkanSwapchain/: VulkanSwapchain.cpp  VulkanSwapchain.h
Core/Renderer/VulkanSynchronization/: VulkanSynchronization.cpp  VulkanSynchronization.h
Core/TextureManager/Vulkan/: TextureManager.cpp  TextureManager.h
Core/Window/: Window.cc  Window.h
Core/Window/OS-Windows/WidnowSetting/: WindowSetting.h
Core/Window/OS-Windows/Win32/: Win32Window.cc  Win32Window.h
Core/Window/OS-Windows/Win32/WindowManager/: WindowManager.cc  WindowManager.h
Core/Window/OS-Windows/Win32/WindowStateEnum/: WindowStateEnum.h
Headers/: GlmConfig.h
Shaders/: model.frag  model.vert  triangle.vert
